cmake_minimum_required(VERSION 3.17)
project(scrcpy)

set(CMAKE_C_FLAGS "-std=c11")

SET(ROUT_DIR ${PROJECT_SOURCE_DIR})
SET(ANDROID_DIR ${PROJECT_SOURCE_DIR}/android)
SET(UTIL_DIR ${PROJECT_SOURCE_DIR}/util)

include_directories(${ROUT_DIR} ${ANDROID_DIR} ${UTIL_DIR})
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} FILES)

find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h)
find_library(AVFORMAT_LIBRARY avformat)
find_path(AVCODEC_INCLUDE_DIR libavcodec/avcodec.h)
find_library(AVCODEC_LIBRARY avcodec)
find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h)
find_library(AVUTIL_LIBRARY avutil)

find_package(sdl2 REQUIRED)

SET(THIRD_INCLUDE_DIR ${AVFORMAT_INCLUDE_DIR} ${AVCODEC_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${THIRD_INCLUDE_DIR})

SET(THIRD_LIBS ${AVFORMAT_LIBRARY} ${AVCODEC_LIBRARY} ${AVUTIL_LIBRARY} ${SDL2_LIBRARIES})

ADD_SUBDIRECTORY(util)

IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    set(SOURCE ${PROJECT_SOURCE_DIR}/sys/win)
    aux_source_directory(${SOURCE} FILE)

    SET(SRC ${FILES} ${FILE})
    ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
else()
    set(SOURCE ${PROJECT_SOURCE_DIR}/sys/unix)
    aux_source_directory(${SOURCE} FILE)

    SET(SRC ${FILES} ${FILE})
    ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
endif (CMAKE_SYSTEM_NAME MATCHES "Windows")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${THIRD_LIBS} util)

# FOR CONFIG.H
SET(DEFAULT_BIT_RATE 8000000)
SET(DEFAULT_LOCAL_PORT_RANGE_FIRST 27183)
SET(DEFAULT_LOCAL_PORT_RANGE_LAST 27199)
SET(DEFAULT_MAX_SIZE 0)
SET(DEFAULT_LOCK_VIDEO_ORIENTATION -1)
SET(PREFIX \"\")
SET(SCRCPY_VERSION \"V1.16\")

OPTION(HIDPI_SUPPORT "hidpi support" ON)
OPTION(NDEBUG "build type" OFF)
OPTION(SERVER_DEBUGGER "server debugger" ON)
OPTION(SERVER_DEBUGGER_METHOD_NEW "server_debugger_method" ON)
OPTION(WINDOWS_NOCONSOLE, "WINDOWS NOCONSOLE" OFF)

configure_file (
        "${PROJECT_SOURCE_DIR}/config.h.in"
        "${PROJECT_SOURCE_DIR}/config.h"
)